--- a/site/blueprints/pages/textpage.yml
+++ b/site/blueprints/pages/textpage.yml
@@ -1,1 +1,18 @@
 title: Text Page
+
+columns:
+
+  - width: 2/3
+    sections:
+
+      content:
+        type: fields
+        fields:
+
+          text:
+            extends: fields/text
+
+  - width: 1/3
+    sections:
+
+      files: sections/files
