panel: show page template

--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -16,6 +16,7 @@ tabs:
         image:
           query: page.images.filterBy('template', 'project').sortBy('sort').first
           conver: true
+        info: "{{ page.intendedTemplate }}"
 
   settings:
     label: Settings
