--- a/site/blueprints/site.yml
+++ b/site/blueprints/site.yml
@@ -21,55 +21,77 @@ tabs:
   settings:
     label: Settings
     icon: cog
-    sections:
+    columns:
 
-      logo:
-        type: files
-        template: logo
-        empty: No logo yet
-        max: 1
-        sortable: false
-        layout: cards
-        size: tiny
-        info: "{{ file.width }} x {{ file.height }}"
-        image:
-          cover: false
-          back: white
+      - width: 3/4
+        sections:
 
-      fields:
-        type: fields
-        fields:
-
-          tagline:
-            label: Tagline
-            type: text
-            help: >
-              Tagline will be displayed in title tag next to your site name.
-              (e.g. {{ site.title }} - Your Custom Tagline)
-
-          description:
-            label: Description
-            type: textarea
-
-          social:
-            label: Social
-            type: structure
+          fields:
+            type: fields
             fields:
-              name:
-                label: Name
-                type: text
-              code:
-                label: Code
-                type: text
-                help: Font Awesome Unicode code.
-              url:
-                label: Url
-                type: url
 
-          footer:
-            label: Footer
-            type: textarea
-            buttons: false
-            help: >
-              This theme is completely free for both personal and commercial use,
-              however any kind of attribution is appreciated.
+              tagline:
+                label: Tagline
+                type: text
+                help: >
+                  Tagline will be displayed in title tag next to your site name.
+                  (e.g. {{ site.title }} - Your Custom Tagline)
+
+              description:
+                label: Description
+                type: textarea
+
+              social:
+                label: Social
+                type: structure
+                fields:
+                  name:
+                    label: Name
+                    type: text
+                  code:
+                    label: Code
+                    type: text
+                    help: Font Awesome Unicode code.
+                  url:
+                    label: Url
+                    type: url
+
+              footer:
+                label: Footer
+                type: textarea
+                buttons: false
+                help: >
+                  This theme is completely free for both personal and commercial use,
+                  however any kind of attribution is appreciated.
+
+      - width: 1/4
+        sections:
+
+          logo:
+            type: files
+            template: logo
+            empty: No logo yet
+            max: 1
+            sortable: false
+            layout: cards
+            size: tiny
+            info: "{{ file.width }} x {{ file.height }}"
+            image:
+              ratio: 1/1
+              cover: false
+              back: white
+            width: 1/2
+
+          favicon:
+            type: files
+            template: favicon
+            empty: No favicon uploaded
+            max: 1
+            sortable: false
+            layout: cards
+            size: tiny
+            info: "{{ file.width }} x {{ file.height }} ({{ file.mime }})"
+            image:
+              ratio: 1/1
+              cover: true
+            width: 1/2
