browserslist, repository, license

--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
     "build:css": "abrusco src/css -o static/master.css",
     "build": "npm run build:css"
   },
-  "browserslist": "last 2 versions, not dead"
+  "browserslist": [
+    "> 2%",
+    "not dead"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lemmon/kirby-portfolio-theme.git"
+  },
+  "license": "MIT"
 }
