cache control headers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
   "files.exclude": {
     "kirby": true,
-    "media": true,
+    "media/*[!.htaccess]**": true,
     "site/accounts": true,
     "site/cache": true,
     "site/sessions": true,
