--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,9 @@ kirby
 media/*
 !media/.htaccess
 site/accounts/*
-!site/accounts/index.html
 site/cache/*
-!site/cache/index.html
 site/sessions/*
-!site/sessions/index.html
 node_modules
 vendor
 composer.lock
+!**/.gitkeep
